syntax="proto2";

package oaa.proto.data;

message PhoneStatusChannel
{
}
